--- a/Final/AppData/Config/ExtConfig.json
+++ b/Final/AppData/Config/ExtConfig.json
@@ -1,31 +1,37 @@
 {
 	"videos":[
-		{"ext":"mp3"},
 		{"ext":"mp4"},
 		{"ext":"mkv"},
 		{"ext":"mpeg"}		
+	],
+	"audio":[
+		{"ext":"mp3"}
 	],
 	"documents":[
 		{"ext":"txt"},
 		{"ext":"pdf"},
 		{"ext":"docx"},
-		{"ext":"odt"},
+		{"ext":"odt"}
+	],
+	"text":[
 		{"ext":"py"},
 		{"ext":"php"},
 		{"ext":"js"},
 		{"ext":"html"},
 		{"ext":"css"},
-		{"ext":"rar"}
+		{"ext":"json"}
 	],
 	"pictures":[
 		{"ext":"jpeg"},
 		{"ext":"jpg"},
 		{"ext":"png"}
 	],
-	"others":[],
 	"compressed":[
 		{"ext":"rar"},
 		{"ext":"iso"},
-		{"ext":"zip"}
-	]
+		{"ext":"zip"},
+		{"ext":"xz"},
+		{"ext":"tar"}
+	],
+	"others":[]
 }
